# Ballistics2023

./: CMakeLists.txt
output/: RK  (+2 more)
src/: CMakeLists.txt  Time.h
src/Forces/: CalcForces.cpp  CalcForces.h  EarthGravity.h  IndependentShadow.h  SolarForce.h  SolarIrradiance.h  SolarPressure.h  SolarRadiation.cpp  SolarRadiation.h
src/Types/: Vector.h
src/atmosphere/: DensityCalculator.h
src/ballistics/atmosphere/: DensityCalculator.h
src/ballistics/ephemeris/: CelestialBodies.h  EphemerisCalculator.h
src/ballistics/exceptions/: Exceptions.h  FrameExceptions.h  TimeExceptions.h
src/ballistics/forces/: AccelerationCalculator.h
src/ballistics/frame/: FrameConverter.h  PolarMotionContainer.h
src/ballistics/solar/: IndependentShadow.h  ShadowModel.h  SolarIrradiance.h  SolarPressure.h
src/ballistics/time/: DutCorrection.h  Time.h  TimeConverter.h
src/ephemeris/: EphemerisCalculator.h
src/forces/: AccelerationCalculator.h  EarthGravity.cpp  EarthGravity.h  IndependentShadow.h  SolarForce.h  SolarIrradiance.h  SolarPressure.h  SolarRadiation.h
src/forces/AtmosphereDrag/: AtmosphereDrag.h
src/forces/EarthGravity/: EarthGravity.cpp  EarthGravity.h
src/forces/Gravity/: CelestialGravity.h  EarthGravity.cpp  EarthGravity.h
src/forces/SolarForce/: SolarForce.h
src/frame/: FrameConverter.h  PolarMotionContainer.h
src/shadow/: IndependentShadow.h  ShadowModel.h
src/solar/: IndependentShadow.h  ShadowModel.h  SolarIrradiance.h  SolarPressure.h
src/time/: DutCorrection.h  Time.h  TimeConverter.h  TimeModuleConstants.h
src/types/: BasicTypes.h
(+67 files in other folders)
